--- a/templates/ecom/cart.html
+++ b/templates/ecom/cart.html
@@ -63,7 +63,7 @@
 
 </head>
 <!--
-written By : sumit kumar
+written By : Umesh Limbure
 -->
 <br><br><br><br>
 
@@ -112,6 +112,6 @@ written By : sumit kumar
 
 <br><br><br><br><br>
 <!--
-developed By : sumit kumar
+developed By : Umesh Limbure
 -->
 {% endblock content %}
