--- a/templates/ecom/index.html
+++ b/templates/ecom/index.html
@@ -380,6 +380,18 @@ img {
 .slide-4 {
   background-image: url("{% static 'images/ecom-banner3.jpg' %}");
 }
+
+.chatbot-btn {
+    position: fixed;
+    bottom: 20px; /* Adjust this value to position the button vertically */
+    right: 20px; /* Adjust this value to position the button horizontally */
+    z-index: 9999; /* Ensure the button is above other elements */
+    background-color: #3fcd7f;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
   </style>
 
 <div class="row">
@@ -461,7 +473,13 @@ img {
 <!-- products data enddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd -->
 {%else%}
 <h3 style="text-align:center; color:#3E454C;">No Search Found</h3>
+
 {%endif%}
+<!-- Embedding the chatbot iframe -->
+<iframe id="chatbot-frame" src="https://webchat.botframework.com/embed/cbotecomlang-bot?s=4V1A_N1Rvko.rWEYJVTmznfJHv2nG7BL4w_8ArHyDF1Qo8XGhOWuNco" style="display: none;"></iframe>
+
+<!-- Chatbot button -->
+<div class="chatbot-btn" onclick="toggleChatbot()">Need Help? Chat with us!</div>
 
 <script>
     {%if messages %}
@@ -469,6 +487,16 @@ img {
     alert('{{message}}');
     {%endfor%}
     {%endif%}
+</script
+<script>
+  function toggleChatbot() {
+    var chatbotFrame = document.getElementById('chatbot-frame');
+    if (chatbotFrame.style.display === 'none') {
+      chatbotFrame.style.display = 'block';
+    } else {
+      chatbotFrame.style.display = 'none';
+    }
+  }
 </script>
 <br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br>
